tdf#119718: give focus where focus is due

shamelessly copied X11SalFrame behaviour with different ToTopFlags:
focus central widget with GrabFocus and GrabFocusOnly, activate
window when coming back from minimized (RestoreWhenMin) or coming
back to foreground (ForegroundTask)

Change-Id: I4d43a00f0a9034e661303c39a1b522def85ab6f5